PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Product_Position__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Positions</relationshipLabel>
        <relationshipName>Product_Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_General_Category__c</fullName>
        <label>General Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Group_Name__c</fullName>
        <label>Group Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ClarusONE</fullName>
                </value>
                <value>
                    <fullName>GSMS</fullName>
                </value>
                <value>
                    <fullName>Red Oak</fullName>
                </value>
                <value>
                    <fullName>Topco Customers</fullName>
                </value>
                <value>
                    <fullName>WBAD</fullName>
                </value>
                <value>
                    <fullName>RX Sourcing Strategies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Position_Comments__c</fullName>
        <label>Position Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Vision Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Product Position</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Phoenix_Group_Name__c</columns>
        <columns>NAME</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Position_Comments__c</columns>
        <columns>Phoenix_General_Category__c</columns>
        <columns>Vision_Unique_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>